--- a/views/index.erb
+++ b/views/index.erb
@@ -218,8 +218,8 @@
         });
 
         $('form .btn').click(function() {
-          $('#post-evt-modal').modal('hide');
-          $('#post-evt-modal').modal('show');
+          $('#post-img-modal').modal('hide');
+          $('#search-evt-modal').modal('show');
           $(this).parents('form').submit();
         });
 
