this should be enough

--- a/views/index.erb
+++ b/views/index.erb
@@ -294,7 +294,7 @@
 
     <div id="search-evt-modal" class="modal hide fade">
       <a href="#" class="close"></a>
-      <div class="modal-header"><h6>Please hang on while we find great events in your location!</h6></div>
+      <div class="modal-header"><h6>Please hang on while we process your request</h6></div>
       <div id="spin-body-search" class="modal-body" style="height: 100px;"></div>
       <div class="modal-footer">
       </div>
